--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,3 +1,10 @@
+:root{
+    /* Colors */
+    --not-cadet-blue: #182A62;
+    --green: #33AB5F;
+    --grey: #E7E7DE;
+}
+
 *{
     padding: 0;
     margin: 0;
