--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -60,7 +60,27 @@ header li{
 }
 
 .cover-section{
+    display: grid;
+    grid-template: minmax(25px,200px) 1fr minmax(25px,200px) / minmax(20px,75px) 1fr minmax(20px,75px);
     background-color: var(--not-cadet-blue);
     width: 100vw;
     height: calc(100vh - 50px);
+}
+
+.introduction-container{
+    display: flex; 
+    grid-column-start: 2;
+    grid-row-start: 2;
+    height: 100%;
+    width: 100%;
+    min-height: 425px;
+    max-height: 800px;
+    min-width: 250px;
+    max-width: 800px;
+    margin: auto;
+    border: 5px solid var(--green);
+    flex-direction: column;
+    color: var(--grey);
+    justify-content: center;
+    align-items: center;
 }
