--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -108,3 +108,12 @@ header li{
     text-align: center;
     margin-top: 15px;
 }
+
+.self-introduction-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    background-color: var(--green);
+}
