--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -117,3 +117,14 @@ header li{
     width: 100vw;
     background-color: var(--green);
 }
+
+.section-title{
+    font-size: 2.4rem;
+    color: var(--not-cadet-blue);
+    font-family: var(--title-font-family);
+    font-weight: 500;
+}
+
+.self-introduction-section__title{
+    margin: 30px 0;
+}
