--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -209,4 +209,20 @@ header li{
     text-align: center;
     background-color: var(--not-cadet-blue);
     max-width: 200px;
+    padding: 0 10px;
+}
+
+.project__title{
+    font-size: 1.8rem;
+    color: var(--green);
+    font-family: var(--title-font-family);
+    margin-top: 15px;
+    line-height: 2rem;
+}
+
+.project__description{
+    margin-top: 8px;
+    font-size: 1.2rem;
+    color: var(--grey);
+    font-family: var(--body-font-family);
 }
