Add initial styles in contact section: display, size, background color and items position

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -226,3 +226,12 @@ header li{
     color: var(--grey);
     font-family: var(--body-font-family);
 }
+
+.contact-section{
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    background-color: var(--not-cadet-blue);
+    flex-direction: column;
+    align-items: center;
+}
