Add styles to title section: change color to grey and position

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -235,3 +235,8 @@ header li{
     flex-direction: column;
     align-items: center;
 }
+
+.contact-section__title{
+    color: var(--grey);
+    margin: 30px auto;
+}
