Add style to texts in the contact-section: font size, color, font family and margin

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -240,3 +240,11 @@ header li{
     color: var(--grey);
     margin: 30px auto;
 }
+
+.contact-section span{
+    font-size: 2.4rem;
+    color: var(--grey);
+    font-family: var(--title-font-family);
+    font-weight: 500;
+    margin: 30px auto;
+}
