--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -20,6 +20,7 @@ html{
 header{
     display: flex;
     width: 100vw;
+    max-width: 100%;
     height: 50px;
     background-color: var(--not-cadet-blue);
     border-bottom: 5px solid #33AB5F;
@@ -64,6 +65,7 @@ header li{
     grid-template: minmax(25px,200px) 1fr minmax(25px,200px) / minmax(20px,75px) 1fr minmax(20px,75px);
     background-color: var(--not-cadet-blue);
     width: 100vw;
+    max-width: 100%;
     height: calc(100vh - 50px);
 }
 
@@ -115,6 +117,7 @@ header li{
     align-items: center;
     height: 100vh;
     width: 100vw;
+    max-width: 100%;
     background-color: var(--green);
 }
 
@@ -188,6 +191,7 @@ header li{
     align-items: center;
     height: 100vh;
     width: 100vw;
+    max-width: 100%;
     background-color: var(--grey);
 }
 
@@ -231,6 +235,7 @@ header li{
     display: flex;
     height: 100vh;
     width: 100vw;
+    max-width: 100%;
     background-color: var(--not-cadet-blue);
     flex-direction: column;
     align-items: center;
