--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -75,7 +75,7 @@ header li{
     grid-row-start: 2;
     height: 100%;
     width: 100%;
-    min-height: 400px;
+    min-height: 200px;
     max-height: 800px;
     min-width: 250px;
     max-width: 800px;
@@ -116,6 +116,8 @@ header li{
     flex-direction: column;
     align-items: center;
     height: 100vh;
+    min-height: 550px;
+    max-height: 700px;
     width: 100vw;
     max-width: 100%;
     background-color: var(--green);
@@ -190,6 +192,8 @@ header li{
     flex-direction: column;
     align-items: center;
     height: 100vh;
+    min-height: 500px;
+    max-height: 600px;
     width: 100vw;
     max-width: 100%;
     background-color: var(--grey);
@@ -234,6 +238,8 @@ header li{
 .contact-section{
     display: flex;
     height: 100vh;
+    min-height: 500px;
+    max-height: 600px;
     width: 100vw;
     max-width: 100%;
     background-color: var(--not-cadet-blue);
