--- a/assets/styles/tablet.css
+++ b/assets/styles/tablet.css
@@ -95,3 +95,13 @@ header{
     max-width: 400px;
     padding: 0 45px;
 }
+
+.project__title{
+    font-size: 3rem;
+    margin-top: 30px;
+    line-height: 3.5rem;
+}
+
+.project__description{
+    font-size: 2rem;
+}
