--- a/assets/styles/desktop.css
+++ b/assets/styles/desktop.css
@@ -8,3 +8,31 @@
     min-height: 500px;
     max-height: 700px;
 }
+
+.self-introduction-section{
+    min-height: 875px;
+    max-height: 1100px;
+}
+
+
+.self-introduction-section__title{
+    margin: 60px 0;
+}
+
+.self-introduction-section__description{
+    margin-right: 60px;
+    max-width: 1200px;
+    margin-bottom: 60px;
+}
+
+.self-introduction-section__skills{
+    margin-bottom: 60px;
+}
+
+.self-introduction-section__skills th{
+    margin-bottom: 60px;
+}
+
+.self-introduction-section__button{
+    height: 60px;
+}
