Set spacing between items in contact section when desktop media query is reached, from 45px to 60px

--- a/assets/styles/desktop.css
+++ b/assets/styles/desktop.css
@@ -57,3 +57,31 @@
     max-width: 420px;
     padding: 0 45px;
 }
+
+.contact-section{
+    min-height: 800px;
+    max-height: 1200px;
+}
+
+.contact-section__title{
+    margin: 60px auto;
+}
+
+.contact-section span{
+    margin: 60px auto;
+}
+
+.contact-section span:nth-child(3){
+    
+    margin: 60px auto;
+}
+
+.contact-section span:nth-child(3) a{
+    line-height: 60px;
+}
+
+
+.contact-section__logo-container{
+    margin: 60px auto;
+    
+}
