Add links to projects in projects section. The anchor items will be added in the grid items

--- a/assets/styles/desktop.css
+++ b/assets/styles/desktop.css
@@ -55,6 +55,13 @@
 
 .project{
     max-width: 420px;
+}
+
+.project__title{
+    padding: 0 45px;
+}
+
+.project__description{
     padding: 0 45px;
 }
 
